--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,94 @@
-telebot
-random
-os
-requests
+
+ pyfiglet
+ selenium
+ requests
+ pyfiglet
+ sys
+ py_compile
+ youtube_dl
+ uuid
+ time
+ os
+ random
+ datetime
+ string
+ secrets
+ webbrowser
+ hashlib
+ colorama
+ n
+ mm
+ new
+ sleep
+ BeautifulSoup
+ new
+ pafy
+ bs4
+ sys
+ json
+ random
+ uuid
+ secrets
+ datetime
+ argparse
+ InstagramAPI
+ sleep
+ string
+ uuid4
+ generate_user_agent
+ threading
+ json
+ datetime
+ token_hex
+ secrets
+ token_hex
+ Fore
+ secrets
+ uuid
+ re
+ b
+ requests
+ pyfiglet
+ sys
+ py_compile
+ youtube_dl
+ uuid
+ time
+ os
+ random
+ datetime
+ string
+ secrets
+ webbrowser
+ hashlib
+ colorama
+ n
+ mm
+ new
+ sleep
+ BeautifulSoup
+ new
+ pafy
+ bs4
+ sys
+ json
+ random
+ uuid
+ secrets
+ datetime
+ *
+ argparse
+ InstagramAPI
+ sleep
+ string
+ uuid4
+ generate_user_agent
+ threading
+ json
+ datetime
+ token_hex
+ secrets
+ token_hex
+ Fore
+ secrets
+ uuid re
